--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,8 @@ build/
 
 ### Mac OS ###
 .DS_Store
+/.idea/vcs.xml
+/.idea/uiDesigner.xml
+/.idea/misc.xml
+/.idea/encodings.xml
+/.idea/.gitignore
